--- a/package.json
+++ b/package.json
@@ -1,22 +1,13 @@
 {
-  "name": "moyuum-app",
+  "name": "moyuum_recommender",
   "private": true,
-  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "data": "node tools/xlsx-to-json.mjs"
-  },
-  "dependencies": {
-    "html2canvas": "^1.4.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "preview": "vite preview --port 5173"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.4.0",
-    "xlsx": "^0.18.5"
+    "vite": "^5.4.0"
   }
 }
