--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vite build",
     "preview": "vite preview --port 5173"
   },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
-    "vite": "^5.4.0"
+    "vite": "^5.4.8"
   }
 }
