--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
