--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,7 +28,8 @@ jobs:
           cache: npm
 
       - name: Install deps
-        run: npm ci
+      run: |
+      npm ci || npm i --no-audit --no-fund
 
       - name: Build
         run: npm run build
