--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "vite build",
     "preview": "vite preview --port 5173"
   },
+  {
   "dependencies": {
-    "html2canvas": "^1.4.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "...",
+    "react-dom": "...",
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "vite": "^5.4.8"
