--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
-    "html2canvas": "^1.4.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "vite": "^5.4.8"
