--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "moyuum_recommender",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5173"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "html2canvas": "^1.4.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "vite": "^5.4.8"
+    "vite": "^5.4.10",
+    "@vitejs/plugin-react": "^4.3.3"
   }
 }
